# video-line-sdk

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
examples/: advanced_usage.py  basic_usage.py
requirements/: requirements-dev.txt
src/video_line_sdk/: __init__.py  color.py  coordinates.py  exceptions.py  video_line.py
tests/: conftest.py  test_core.py
